# ik-geo

./: .gitignore  IRB_6640.m  IRB_6640.mlx  LICENSE  README.md  robot_LS_tests.m  run_LS_tests.m  run_correctness_tests.m  run_robot_IK_correctness_tests.m  timing_robot_IK.m  ur5.m  ur5.mlx  usage.m  usage.mlx
+IK/: IK_2_intersecting.m  IK_3_parallel.m  IK_3_parallel_2_intersecting.m  IK_gen_6_dof.m  IK_spherical.m  IK_spherical_2_intersecting.m  IK_spherical_2_parallel.m  generate_mex.m
+IK_setups/: IK_2R_2R_3R.m  IK_3R_1R_3R.m  IK_3_parallel.m  IK_3_parallel_2_intersecting.m  IK_gen_6_dof.m  IK_spherical.m  IK_spherical_2_intersecting.m  IK_spherical_2_parallel.m
+hardcoded_IK/: generate_mex.m  ur5.m
+hardcoded_IK_setups/: IRB_6640.m  KUKA_R800_fixed_q3.m  RRC_fixed_q6.m  spherical_bot.m  three_parallel_bot.m  ur5.m  yumi_fixed_q3.m
+subproblem/: gen_6_dof_alignment_vs_q12.m  generate_mex.m  solve_2_ellipse_symb.m  sp_1.m  sp_2.m  sp_3.m  (+4 more)
rust/: .gitignore  Cargo.toml  README.md  build.rs  lib_ikfast.config  timing_results.md  wsltiming.txt
rust/benches/: benchmark.rs
rust/ikfast/: README.md  ikfast.h  ikfast_proxy.cpp  irb6640.cpp  kuka_kr30l16.cpp
rust/src/: auxiliary.rs  correctness.rs  demo.rs  ik_aux.rs  ik_setups.rs  ikfast.rs  inverse_kinematics.rs  lib.rs  search.rs  setups.rs  solutionset.rs  subproblems.rs  timing.rs
rust/src/inverse_kinematics/: auxiliary.rs  mod.rs  setups.rs
rust/src/inverse_kinematics/hardcoded/: mod.rs  setups.rs
rust/src/subproblems/: auxiliary.rs  mod.rs  setups.rs
rust/src/tests/: correctness.rs  mod.rs  setups.rs
(+396 files in other folders)
