[package]
name = "linear-subproblem-solutions-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.2"
fastrand = "1.8.0"
argmin = "0.8.1"
argmin-math = { version = "0.3.0", features = [ "nalgebra_latest-serde" ] }

[dev-dependencies.criterion]
version = "0.3"
features = [ "html_reports" ]

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "linear_subproblem_solutions_rust"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "demo"
path = "src/demo.rs"
